--- a/frontend/src/app/admin/grupy-list/grupy-list.component.html
+++ b/frontend/src/app/admin/grupy-list/grupy-list.component.html
@@ -24,7 +24,7 @@
             }
           </td>
           <td>
-            <button (click)="edytuj(g.id)" class="btn-link">Zmień nazwę</button>
+            <button (click)="zarzadzaj(g)" class="btn-link">Zarządzaj</button>
           </td>
         </tr>
       }
